@@ -3,3 +3,4 @@
  - Added: Support for key-based (API) authentication on PDO backend
  - Added: ChangeLog
  - Changed: PDO config to support dynamic DB configuration (optionally)
+ - Added: GetAllUsers function to return username/id list (used for GUIs)
